--- a/css/style.css
+++ b/css/style.css
@@ -204,7 +204,8 @@ body {
   padding: 2.5rem;
   text-align: center;
   border-radius: 0.3rem;
-  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transform .3s; }
   .feature-box__icon {
     font-size: 6rem;
     margin-bottom: 0.5rem;
@@ -212,6 +213,8 @@ body {
     background-image: linear-gradient(to right, #55c57a, #324e45);
     -webkit-background-clip: text;
     color: transparent; }
+  .feature-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
 
 .header {
   height: 95vh;
@@ -269,5 +272,9 @@ body {
 
 .section-features {
   padding: 20rem 0;
+  margin-top: -10rem;
   background-image: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(50, 78, 69, 0.8)), url(../img/nat-4.jpg);
-  background-size: cover; }
+  background-size: cover;
+  transform: skewY(-5deg); }
+  .section-features > * {
+    transform: skewY(5deg); }
