--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -6,8 +6,24 @@
   box-sizing: inherit;
 }
 html {
-  font-size: 62.5%; /* font-size: 10px; 100% or 10/16 =62.5 */
+  font-size: 62.5%; /* font-size: 10px; 100% or 10px/16px=62.5 % */
+
+  @include responsive(tablet-landscape) {
+    font-size: 56.25%; // 1rem = 9px, => 9px/16px = 56.25%;
+  }
+  @include responsive(tablet-portrait) {
+    font-size: 50%; // 1rem = 8px, => 8px/16px = 50%;
+  }
+  @include responsive(phone) {
+    font-size: 30%; // 1rem = 8px, => 8px/16px = 50%;
+  }
+  @include responsive(big-desktop) {
+    font-size: 75%; //1rem =12, 12/16
+  }
 }
 body {
   box-sizing: border-box;
+  padding: 3rem;
+  @include responsive(tablet-portrait) {
+  }
 }
