--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -4,7 +4,6 @@ body {
   font-size: 1.6rem;
   line-height: 1.7;
   color: $color-gray-dark;
-  padding: 3rem;
 }
 .heading-primary {
   color: $color-white;
@@ -22,6 +21,11 @@ body {
     /* animation-iteration-count: 3; */
     /* animation-delay: 3s; */
     animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
+
+    @include responsive(phone) {
+      letter-spacing: 1rem;
+      font-family: 5rem;
+    }
   }
 
   &--sub {
@@ -32,6 +36,9 @@ body {
     animation-name: moveInRight;
     animation-duration: 1.8s;
     animation-timing-function: cubic-bezier(0.455, 0.03, 0.515, 0.955);
+    @include responsive(phone) {
+      letter-spacing: 0.5rem;
+    }
   }
 }
 
@@ -49,6 +56,12 @@ body {
   color: transparent;
   transition: all 0.2s;
   letter-spacing: 0.2rem;
+  @include responsive(tablet-portrait) {
+    font-size: 3rem;
+  }
+  @include responsive(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
